--- a/freezone.html
+++ b/freezone.html
@@ -44,209 +44,191 @@
   </head>
 
   <body>
-    <div class="hero_area">
-      <!-- header section strats -->
-      <header class="header_section">
-        <div class="container-fluid">
-          <nav class="navbar navbar-expand-lg custom_nav-container">
-            <a class="navbar-brand" href="/">
-              <!-- <span>IDC</span> -->
-              <img src="images/logo_square.png" alt="IDC logo" height="60" />
-            </a>
+    <!-- header section strats -->
+    <header class="header_section">
+      <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg custom_nav-container">
+          <a class="navbar-brand" href="/">
+            <!-- <span>IDC</span> -->
+            <img src="images/logo_square.png" alt="IDC logo" height="60" />
+          </a>
 
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class=""> </span>
-            </button>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class=""> </span>
+          </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item dropdown">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="bussinessDropdown"
+                  role="button"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
+                  Bussiness Setups
+                </a>
+                <div class="dropdown-menu" aria-labelledby="bussinessDropdown">
+                  <a class="dropdown-item" href="business_setup.html"
+                    >New Business Setup</a
+                  >
+                  <a class="dropdown-item" href="license_renewal.html"
+                    >License Renewal</a
+                  >
+                  <a class="dropdown-item" href="ejari_service.html"
+                    >Ejari Services</a
+                  >
+                  <a class="dropdown-item" href="virtual_ejari_service.html"
+                    >Virtual Ejari Services</a
+                  >
+                  <a class="dropdown-item" href="trade_license.html"
+                    >Trade License</a
+                  >
+                  <a class="dropdown-item" href="vat_registration.html"
+                    >VAT Registration</a
+                  >
+                  <a class="dropdown-item" href="offshore.html">Offshore</a>
+                  <a class="dropdown-item" href="license_amendment.html"
+                    >License Amendment</a
+                  >
+                  <a class="dropdown-item" href="mainland.html">Mainland</a>
+                  <a class="dropdown-item" href="freezone.html">Freezone</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="visaDropdown"
+                  role="button"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
+                  Visa
+                </a>
+                <div class="dropdown-menu" aria-labelledby="visaDropdown">
+                  <a class="dropdown-item" href="golden_visa.html"
+                    >Golden Visa</a
+                  >
+                  <a class="dropdown-item" href="employment_visa.html"
+                    >Employment Visa</a
+                  >
+                  <a class="dropdown-item" href="family_visa.html"
+                    >Family Visa</a
+                  >
+                  <a class="dropdown-item" href="visit_visa.html">Visit Visa</a>
+                  <a class="dropdown-item" href="talent_visa.html"
+                    >Talent Visa</a
+                  >
+                  <a class="dropdown-item" href="investor_visa.html"
+                    >Investor Visa</a
+                  >
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="bank-account.html">Bank Account</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="branding.html">Branding</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="servicesDropdown"
+                  role="button"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
+                  Other Services
+                </a>
+                <div class="dropdown-menu" aria-labelledby="servicesDropdown">
+                  <a class="dropdown-item" href="business_consulting.html"
+                    >Business Consulting</a
+                  >
+                  <a class="dropdown-item" href="flexible_workspaces.html"
+                    >Flexible Workspaces</a
+                  >
+                  <a class="dropdown-item" href="pro_services.html"
+                    >PRO Services</a
+                  >
                   <a
-                    class="nav-link dropdown-toggle"
-                    href="#"
-                    id="bussinessDropdown"
-                    role="button"
-                    data-toggle="dropdown"
-                    aria-haspopup="true"
-                    aria-expanded="false"
+                    class="dropdown-item"
+                    href="international_driving_license.html"
+                    >International Driving License</a
                   >
-                    Bussiness Setups
-                  </a>
-                  <div
-                    class="dropdown-menu"
-                    aria-labelledby="bussinessDropdown"
+                  <a class="dropdown-item" href="certificate_attestation.html"
+                    >Certificate Attestation</a
                   >
-                    <a class="dropdown-item" href="business_setup.html"
-                      >New Business Setup</a
-                    >
-                    <a class="dropdown-item" href="license_renewal.html"
-                      >License Renewal</a
-                    >
-                    <a class="dropdown-item" href="ejari_service.html"
-                      >Ejari Services</a
-                    >
-                    <a class="dropdown-item" href="virtual_ejari_service.html"
-                      >Virtual Ejari Services</a
-                    >
-                    <a class="dropdown-item" href="trade_license.html"
-                      >Trade License</a
-                    >
-                    <a class="dropdown-item" href="vat_registration.html"
-                      >VAT Registration</a
-                    >
-                    <a class="dropdown-item" href="offshore.html">Offshore</a>
-                    <a class="dropdown-item" href="license_amendment.html"
-                      >License Amendment</a
-                    >
-                    <a class="dropdown-item" href="mainland.html">Mainland</a>
-                    <a class="dropdown-item" href="freezone.html">Freezone</a>
-                  </div>
-                </li>
-                <li class="nav-item dropdown">
-                  <a
-                    class="nav-link dropdown-toggle"
-                    href="#"
-                    id="visaDropdown"
-                    role="button"
-                    data-toggle="dropdown"
-                    aria-haspopup="true"
-                    aria-expanded="false"
+                  <a class="dropdown-item" href="company_liquidation.html"
+                    >Company Liquidation Services</a
                   >
-                    Visa
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="visaDropdown">
-                    <a class="dropdown-item" href="golden_visa.html"
-                      >Golden Visa</a
-                    >
-                    <a class="dropdown-item" href="employment_visa.html"
-                      >Employment Visa</a
-                    >
-                    <a class="dropdown-item" href="family_visa.html"
-                      >Family Visa</a
-                    >
-                    <a class="dropdown-item" href="visit_visa.html"
-                      >Visit Visa</a
-                    >
-                    <a class="dropdown-item" href="talent_visa.html"
-                      >Talent Visa</a
-                    >
-                    <a class="dropdown-item" href="investor_visa.html"
-                      >Investor Visa</a
-                    >
-                  </div>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="bank-account.html">Bank Account</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="branding.html">Branding</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a
-                    class="nav-link dropdown-toggle"
-                    href="#"
-                    id="servicesDropdown"
-                    role="button"
-                    data-toggle="dropdown"
-                    aria-haspopup="true"
-                    aria-expanded="false"
+                  <a class="dropdown-item" href="insurance.html">Insurance</a>
+                  <a class="dropdown-item" href="medical_typing.html"
+                    >Medical/ID Typing</a
                   >
-                    Other Services
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="servicesDropdown">
-                    <a class="dropdown-item" href="business_consulting.html"
-                      >Business Consulting</a
-                    >
-                    <a class="dropdown-item" href="flexible_workspaces.html"
-                      >Flexible Workspaces</a
-                    >
-                    <a class="dropdown-item" href="pro_services.html"
-                      >PRO Services</a
-                    >
-                    <a
-                      class="dropdown-item"
-                      href="international_driving_license.html"
-                      >International Driving License</a
-                    >
-                    <a class="dropdown-item" href="certificate_attestation.html"
-                      >Certificate Attestation</a
-                    >
-                    <a class="dropdown-item" href="company_liquidation.html"
-                      >Company Liquidation Services</a
-                    >
-                    <a class="dropdown-item" href="insurance.html">Insurance</a>
-                    <a class="dropdown-item" href="medical_typing.html"
-                      >Medical/ID Typing</a
-                    >
-                  </div>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-              </ul>
-              <div class="quote_btn-container">
-                <!-- <form class="form-inline">
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+            <div class="quote_btn-container">
+              <!-- <form class="form-inline">
                 <button class="btn   nav_search-btn" type="submit">
                   <i class="fa fa-search" aria-hidden="true"></i>
                 </button>
               </form> -->
-                <!-- <a href="">
+              <!-- <a href="">
                   <i class="fa fa-phone" aria-hidden="true"></i>
                   <span> Call : 042555355 </span>
                 </a> -->
-              </div>
             </div>
-          </nav>
-        </div>
-      </header>
-      <!-- end header section -->
+          </div>
+        </nav>
+      </div>
+    </header>
+    <!-- end header section -->
 
-      <!-- slider section -->
-      <section class="slider_section">
-        <div id="customCarousel1" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="detail-box">
-                      <h1>MAXIMIZE SUCCESS IN FREEZONES</h1>
-                      <p>
-                        Comprehensive Freezone Setup and Consulting Services
-                      </p>
-                      <div class="btn-box">
-                        <a href="contact.html" class="btn-2"> Contact Us </a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="row">
-                      <div class="col-lg-10 mx-auto">
-                        <div class="img-box">
-                          <img src="images/slide1.webp" alt="" />
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+    <section class="fullpage-slider">
+      <div
+        id="fullCarousel"
+        class="carousel slide carousel-fade"
+        data-ride="carousel"
+      >
+        <!-- slides -->
+        <div class="carousel-inner">
+          <div
+            class="carousel-item active"
+            style="background-image: url('images/img_11.png')"
+          >
+            <div class="carousel-caption">
+              <div class="caption-content">
+                <h1>MAXIMIZE SUCCESS IN FREEZONES</h1>
+                <p>Comprehensive Freezone Setup and Consulting Services</p>
+                <a href="contact.html" class="btn btn-primary">Contact Us</a>
               </div>
             </div>
           </div>
         </div>
-      </section>
-      <!-- end slider section -->
-    </div>
+      </div>
+    </section>
 
     <!-- service section -->
 
