--- a/pro_services.html
+++ b/pro_services.html
@@ -218,7 +218,7 @@
         <div class="carousel-inner">
           <div
             class="carousel-item active"
-            style="background-image: url('images/img_6.png')"
+            style="background-image: url('images/PRO_services.png')"
           >
             <div class="carousel-caption">
               <div class="caption-content">
