--- a/offshore.html
+++ b/offshore.html
@@ -216,7 +216,7 @@
         <div class="carousel-inner">
           <div
             class="carousel-item active"
-            style="background-image: url('images/img_9.png')"
+            style="background-image: url('images/offshore.png')"
           >
             <div class="carousel-caption">
               <div class="caption-content">
