--- a/about.html
+++ b/about.html
@@ -41,6 +41,8 @@
     <link href="css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
+
+    <link rel="preload" as="image" href="images/logo_square.png" />
   </head>
 
   <body class="sub_page">
