--- a/company_liquidation.html
+++ b/company_liquidation.html
@@ -46,6 +46,9 @@
     <link href="css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
+
+    <link rel="preload" as="image" href="images/logo_square.png" />
+    <link rel="preload" as="image" href="images/company_liquidation_services.webp" />
   </head>
 
   <body>
@@ -222,7 +225,7 @@
           <div
             class="carousel-item active"
             style="
-              background-image: url('images/company_liquidation_services.png');
+              background-image: url('images/company_liquidation_services.webp');
             "
           >
             <div class="carousel-caption">
