--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     <link href="css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
+    
+    <link rel="preload" as="image" href="images/logo_square.png" />
+    <link rel="preload" as="image" href="images/img_1.webp" />
   </head>
 
   <body>
@@ -224,7 +227,7 @@
         <div class="carousel-inner">
           <div
             class="carousel-item active"
-            style="background-image: url('images/img_1.png')"
+            style="background-image: url('images/img_1.webp')"
           >
             <div class="carousel-caption">
               <div class="caption-content">
@@ -242,7 +245,7 @@
           </div>
           <div
             class="carousel-item"
-            style="background-image: url('images/img_2.png')"
+            style="background-image: url('images/img_2.webp')"
           >
             <div class="carousel-caption">
               <div class="caption-content">
@@ -259,7 +262,7 @@
           </div>
           <div
             class="carousel-item"
-            style="background-image: url('images/img_3.png')"
+            style="background-image: url('images/img_3.webp')"
           >
             <div class="carousel-caption">
               <div class="caption-content">
