--- a/international_driving_license.html
+++ b/international_driving_license.html
@@ -47,6 +47,9 @@
     <link href="css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
+
+    <link rel="preload" as="image" href="images/logo_square.png" />
+    <link rel="preload" as="image" href="images/International_driving_license.webp" />
   </head>
 
   <body>
@@ -223,7 +226,7 @@
           <div
             class="carousel-item active"
             style="
-              background-image: url('images/International_driving_license.png');
+              background-image: url('images/International_driving_license.webp');
             "
           >
             <div class="carousel-caption">
