--- a/branding.html
+++ b/branding.html
@@ -41,6 +41,9 @@
     <link href="css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
+
+    <link rel="preload" as="image" href="images/logo_square.png" />
+    <link rel="preload" as="image" href="images/Branding.webp" />
   </head>
 
   <body>
@@ -216,7 +219,7 @@
         <div class="carousel-inner">
           <div
             class="carousel-item active"
-            style="background-image: url('images/Branding.png')"
+            style="background-image: url('images/Branding.webp')"
           >
             <div class="carousel-caption">
               <div class="caption-content">
