--- a/certificate_attestation.html
+++ b/certificate_attestation.html
@@ -46,6 +46,9 @@
     <link href="css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
+
+    <link rel="preload" as="image" href="images/logo_square.png" />
+    <link rel="preload" as="image" href="images/certificate_attestation.webp" />
   </head>
 
   <body>
@@ -221,7 +224,7 @@
         <div class="carousel-inner">
           <div
             class="carousel-item active"
-            style="background-image: url('images/certificate_attestation.png')"
+            style="background-image: url('images/certificate_attestation.webp')"
           >
             <div class="carousel-caption">
               <div class="caption-content">
