--- a/flexible_workspaces.html
+++ b/flexible_workspaces.html
@@ -46,6 +46,9 @@
     <link href="css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
+
+    <link rel="preload" as="image" href="images/logo_square.png" />
+    <link rel="preload" as="image" href="images/flexible_workspaces.webp" />
   </head>
 
   <body>
@@ -221,7 +224,7 @@
         <div class="carousel-inner">
           <div
             class="carousel-item active"
-            style="background-image: url('images/flexible_workspaces.png')"
+            style="background-image: url('images/flexible_workspaces.webp')"
           >
             <div class="carousel-caption">
               <div class="caption-content">
