--- a/medical_typing.html
+++ b/medical_typing.html
@@ -43,6 +43,9 @@
     <link href="css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
+
+    <link rel="preload" as="image" href="images/logo_square.png" />
+    <link rel="preload" as="image" href="images/medical_typing.webp" />
   </head>
 
   <body>
@@ -218,7 +221,7 @@
         <div class="carousel-inner">
           <div
             class="carousel-item active"
-            style="background-image: url('images/medical_typing.png')"
+            style="background-image: url('images/medical_typing.webp')"
           >
             <div class="carousel-caption">
               <div class="caption-content">
