--- a/vat_registration.html
+++ b/vat_registration.html
@@ -43,6 +43,9 @@
     <link href="css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
+
+    <link rel="preload" as="image" href="images/logo_square.png" />
+    <link rel="preload" as="image" href="images/img_8.webp" />
   </head>
 
   <body>
@@ -218,7 +221,7 @@
         <div class="carousel-inner">
           <div
             class="carousel-item active"
-            style="background-image: url('images/img_8.png')"
+            style="background-image: url('images/img_8.webp')"
           >
             <div class="carousel-caption">
               <div class="caption-content">
