updations to increase performance

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <!-- Basic -->
     <meta charset="utf-8" />
@@ -228,7 +228,7 @@
                 class="fa fa-envelope icon"
                 style="font-size: xx-large; padding-bottom: 20px"
               ></i>
-              <h4>Email</h4>
+              <h3>Email</h3>
               <p>idctyping@gmail.com</p>
             </div>
           </div>
@@ -238,7 +238,7 @@
                 class="fa fa-map-marker icon"
                 style="font-size: xx-large; padding-bottom: 20px"
               ></i>
-              <h4>Address</h4>
+              <h3>Address</h3>
               <p>FREEJ ALMURAR, DEIRA DUBAI</p>
             </div>
           </div>
@@ -248,7 +248,7 @@
                 class="fa fa-phone icon"
                 style="font-size: xx-large; padding-bottom: 20px"
               ></i>
-              <h4>Call At</h4>
+              <h3>Call At</h3>
               <p>042555355</p>
             </div>
           </div>
@@ -308,16 +308,24 @@
               </div>
             </div>
             <div class="info_social">
-              <a href="">
+              <a
+                href="https://www.facebook.com/people/IDC-Typing/100071457108147/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <i class="fa fa-facebook" aria-hidden="true"></i>
               </a>
-              <a href="">
+              <!-- <a href="">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
               </a>
               <a href="">
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </a>
-              <a href="">
+              </a> -->
+              <a
+                href="https://www.instagram.com/idc_typing/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </div>
