--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <!-- Basic -->
     <meta charset="utf-8" />
@@ -41,7 +41,7 @@
     <link href="css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
-    
+
     <link rel="preload" as="image" href="images/logo_square.png" />
     <link rel="preload" as="image" href="images/img_1.webp" />
   </head>
@@ -308,7 +308,7 @@
     <section class="service_section layout_padding">
       <div class="container">
         <div class="heading_container heading_center">
-          <h2>Our Services</h2>
+          <h3 class="font-weight-bold">Our Services</h3>
         </div>
       </div>
       <div class="container">
@@ -466,7 +466,10 @@
                 have a hassle-free experience. Trust us to be your partner in
                 document clearing services in the UAE.
               </p>
-              <a href="about.html"> Read More </a>
+              <a href="about.html">
+                Learn More about IDC Services
+                <i class="fa fa-long-arrow-right ml-2" aria-hidden="true"></i>
+              </a>
             </div>
           </div>
           <div class="col-md-6">
@@ -481,7 +484,7 @@
     <!-- end about section -->
 
     <!-- client section -->
-    <section class="client_section">
+    <!-- <section class="client_section">
       <div class="container">
         <div class="heading_container heading_center">
           <h2>Testimonial</h2>
@@ -610,7 +613,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- end client section -->
 
     <!-- contact section -->
@@ -626,7 +629,7 @@
                 class="fa fa-envelope icon"
                 style="font-size: xx-large; padding-bottom: 20px"
               ></i>
-              <h4>Email</h4>
+              <h3>Email</h3>
               <p>idctyping@gmail.com</p>
             </div>
           </div>
@@ -636,7 +639,7 @@
                 class="fa fa-map-marker icon"
                 style="font-size: xx-large; padding-bottom: 20px"
               ></i>
-              <h4>Address</h4>
+              <h3>Address</h3>
               <p>FREEJ ALMURAR, DEIRA DUBAI</p>
             </div>
           </div>
@@ -646,7 +649,7 @@
                 class="fa fa-phone icon"
                 style="font-size: xx-large; padding-bottom: 20px"
               ></i>
-              <h4>Call At</h4>
+              <h3>Call At</h3>
               <p>042555355</p>
             </div>
           </div>
@@ -706,16 +709,24 @@
               </div>
             </div>
             <div class="info_social">
-              <a href="">
+              <a
+                href="https://www.facebook.com/people/IDC-Typing/100071457108147/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <i class="fa fa-facebook" aria-hidden="true"></i>
               </a>
-              <a href="">
+              <!-- <a href="">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
               </a>
               <a href="">
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </a>
-              <a href="">
+              </a> -->
+              <a
+                href="https://www.instagram.com/idc_typing/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </div>
