--- a/service.html
+++ b/service.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <!-- Basic -->
     <meta charset="utf-8" />
@@ -220,7 +220,7 @@
     <section class="service_section layout_padding">
       <div class="container">
         <div class="heading_container heading_center">
-          <h2>Our Services</h2>
+          <h3 class="font-weight-bold">Our Services</h3>
         </div>
       </div>
       <div class="container">
@@ -376,16 +376,24 @@
               </div>
             </div>
             <div class="info_social">
-              <a href="">
+              <a
+                href="https://www.facebook.com/people/IDC-Typing/100071457108147/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <i class="fa fa-facebook" aria-hidden="true"></i>
               </a>
-              <a href="">
+              <!-- <a href="">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
               </a>
               <a href="">
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </a>
-              <a href="">
+              </a> -->
+              <a
+                href="https://www.instagram.com/idc_typing/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </div>
