--- a/family_visa.html
+++ b/family_visa.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <!-- Basic -->
     <meta charset="utf-8" />
@@ -302,16 +302,24 @@
               </div>
             </div>
             <div class="info_social">
-              <a href="">
+              <a
+                href="https://www.facebook.com/people/IDC-Typing/100071457108147/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <i class="fa fa-facebook" aria-hidden="true"></i>
               </a>
-              <a href="">
+              <!-- <a href="">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
               </a>
               <a href="">
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </a>
-              <a href="">
+              </a> -->
+              <a
+                href="https://www.instagram.com/idc_typing/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </div>
