lazy loading added  to images

--- a/service.html
+++ b/service.html
@@ -228,7 +228,7 @@
           <div class="col-md-6 col-lg-4">
             <div class="box">
               <div class="img-box">
-                <img src="images/briefcase-solid.svg" alt="" />
+                <img loading="lazy" src="images/briefcase-solid.svg" alt="" />
               </div>
               <div class="detail-box">
                 <h4>Business Setup and Licensing</h4>
@@ -249,7 +249,7 @@
           <div class="col-md-6 col-lg-4">
             <div class="box">
               <div class="img-box">
-                <img src="images/id-card-regular.svg" alt="" />
+                <img loading="lazy" src="images/id-card-regular.svg" alt="" />
               </div>
               <div class="detail-box">
                 <h4>Visa and immigration Services</h4>
@@ -269,7 +269,7 @@
           <div class="col-md-6 col-lg-4">
             <div class="box">
               <div class="img-box">
-                <img src="images/arrows-rotate-solid.svg" alt="" />
+                <img loading="lazy" src="images/arrows-rotate-solid.svg" alt="" />
               </div>
               <div class="detail-box">
                 <h4>Renewal and Amendments</h4>
@@ -290,7 +290,7 @@
           <div class="col-md-6 col-lg-4">
             <div class="box">
               <div class="img-box">
-                <img src="images/pencil-solid.svg" alt="" />
+                <img loading="lazy" src="images/pencil-solid.svg" alt="" />
               </div>
               <div class="detail-box">
                 <h4>PRO Services</h4>
@@ -310,7 +310,7 @@
           <div class="col-md-6 col-lg-4">
             <div class="box">
               <div class="img-box">
-                <img src="images/file-regular.svg" alt="" />
+                <img loading="lazy" src="images/file-regular.svg" alt="" />
               </div>
               <div class="detail-box">
                 <h4>Legal Translation Services</h4>
@@ -330,7 +330,7 @@
           <div class="col-md-6 col-lg-4">
             <div class="box">
               <div class="img-box">
-                <img src="images/square-check-regular.svg" alt="" />
+                <img loading="lazy" src="images/square-check-regular.svg" alt="" />
               </div>
               <div class="detail-box">
                 <h4>Attestation Services</h4>
