--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
           <div class="col-md-6 col-lg-4">
             <div class="box">
               <div class="img-box">
-                <img src="images/briefcase-solid.svg" alt="" />
+                <img loading="lazy" src="images/briefcase-solid.svg" alt="" />
               </div>
               <div class="detail-box">
                 <h4>Business Setup and Licensing</h4>
@@ -337,7 +337,7 @@
           <div class="col-md-6 col-lg-4">
             <div class="box">
               <div class="img-box">
-                <img src="images/id-card-regular.svg" alt="" />
+                <img loading="lazy" src="images/id-card-regular.svg" alt="" />
               </div>
               <div class="detail-box">
                 <h4>Visa and immigration Services</h4>
@@ -357,7 +357,7 @@
           <div class="col-md-6 col-lg-4">
             <div class="box">
               <div class="img-box">
-                <img src="images/arrows-rotate-solid.svg" alt="" />
+                <img loading="lazy" src="images/arrows-rotate-solid.svg" alt="" />
               </div>
               <div class="detail-box">
                 <h4>Renewal and Amendments</h4>
@@ -378,7 +378,7 @@
           <div class="col-md-6 col-lg-4">
             <div class="box">
               <div class="img-box">
-                <img src="images/pencil-solid.svg" alt="" />
+                <img loading="lazy" src="images/pencil-solid.svg" alt="" />
               </div>
               <div class="detail-box">
                 <h4>PRO Services</h4>
@@ -398,7 +398,7 @@
           <div class="col-md-6 col-lg-4">
             <div class="box">
               <div class="img-box">
-                <img src="images/file-regular.svg" alt="" />
+                <img loading="lazy" src="images/file-regular.svg" alt="" />
               </div>
               <div class="detail-box">
                 <h4>Legal Translation Services</h4>
@@ -418,7 +418,7 @@
           <div class="col-md-6 col-lg-4">
             <div class="box">
               <div class="img-box">
-                <img src="images/square-check-regular.svg" alt="" />
+                <img loading="lazy" src="images/square-check-regular.svg" alt="" />
               </div>
               <div class="detail-box">
                 <h4>Attestation Services</h4>
