--- a/certificate_attestation.html
+++ b/certificate_attestation.html
@@ -48,7 +48,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
 
     <link rel="preload" as="image" href="images/logo_square.png" />
-    <link rel="preload" as="image" href="images/certificate_attestation.webp" />
+    <link rel="preload" as="image" href="images/attestation.png" />
   </head>
 
   <body>
@@ -224,7 +224,7 @@
         <div class="carousel-inner">
           <div
             class="carousel-item active"
-            style="background-image: url('images/certificate_attestation.webp')"
+            style="background-image: url('images/attestation.png')"
           >
             <div class="carousel-caption">
               <div class="caption-content">
