--- a/company_liquidation.html
+++ b/company_liquidation.html
@@ -48,11 +48,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
 
     <link rel="preload" as="image" href="images/logo_square.png" />
-    <link
-      rel="preload"
-      as="image"
-      href="images/company_liquidation_services.webp"
-    />
+    <link rel="preload" as="image" href="images/liquidation.png" />
   </head>
 
   <body>
@@ -228,9 +224,7 @@
         <div class="carousel-inner">
           <div
             class="carousel-item active"
-            style="
-              background-image: url('images/company_liquidation_services.webp');
-            "
+            style="background-image: url('images/liquidation.png')"
           >
             <div class="carousel-caption">
               <div class="caption-content">
