--- a/flexible_workspaces.html
+++ b/flexible_workspaces.html
@@ -48,7 +48,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
 
     <link rel="preload" as="image" href="images/logo_square.png" />
-    <link rel="preload" as="image" href="images/flexible_workspaces.webp" />
+    <link rel="preload" as="image" href="images/workspaces.png" />
   </head>
 
   <body>
@@ -224,7 +224,7 @@
         <div class="carousel-inner">
           <div
             class="carousel-item active"
-            style="background-image: url('images/flexible_workspaces.webp')"
+            style="background-image: url('images/workspaces.png')"
           >
             <div class="carousel-caption">
               <div class="caption-content">
