--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
 
     <link rel="preload" as="image" href="images/logo_square.png" />
-    <link rel="preload" as="image" href="images/img_1.webp" />
+    <link rel="preload" as="image" href="images/slide_1.png" />
   </head>
 
   <body>
@@ -227,7 +227,7 @@
         <div class="carousel-inner">
           <div
             class="carousel-item active"
-            style="background-image: url('images/img_1.webp')"
+            style="background-image: url('images/slide_1.png')"
           >
             <div class="carousel-caption">
               <div class="caption-content">
@@ -245,7 +245,7 @@
           </div>
           <div
             class="carousel-item"
-            style="background-image: url('images/img_2.webp')"
+            style="background-image: url('images/slide_2.png')"
           >
             <div class="carousel-caption">
               <div class="caption-content">
@@ -262,7 +262,7 @@
           </div>
           <div
             class="carousel-item"
-            style="background-image: url('images/img_3.webp')"
+            style="background-image: url('images/slide_3.png')"
           >
             <div class="carousel-caption">
               <div class="caption-content">
@@ -357,7 +357,11 @@
           <div class="col-md-6 col-lg-4">
             <div class="box">
               <div class="img-box">
-                <img loading="lazy" src="images/arrows-rotate-solid.svg" alt="" />
+                <img
+                  loading="lazy"
+                  src="images/arrows-rotate-solid.svg"
+                  alt=""
+                />
               </div>
               <div class="detail-box">
                 <h4>Renewal and Amendments</h4>
@@ -418,7 +422,11 @@
           <div class="col-md-6 col-lg-4">
             <div class="box">
               <div class="img-box">
-                <img loading="lazy" src="images/square-check-regular.svg" alt="" />
+                <img
+                  loading="lazy"
+                  src="images/square-check-regular.svg"
+                  alt=""
+                />
               </div>
               <div class="detail-box">
                 <h4>Attestation Services</h4>
