--- a/license_amendment.html
+++ b/license_amendment.html
@@ -45,7 +45,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
 
     <link rel="preload" as="image" href="images/logo_square.png" />
-    <link rel="preload" as="image" href="images/License_amendement.webp" />
+    <link rel="preload" as="image" href="images/license_amendment.png" />
   </head>
 
   <body>
@@ -221,7 +221,7 @@
         <div class="carousel-inner">
           <div
             class="carousel-item active"
-            style="background-image: url('images/License_amendement.webp')"
+            style="background-image: url('images/license_amendment.png')"
           >
             <div class="carousel-caption">
               <div class="caption-content">
