--- a/visit_visa.html
+++ b/visit_visa.html
@@ -43,7 +43,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
 
     <link rel="preload" as="image" href="images/logo_square.png" />
-    <link rel="preload" as="image" href="images/visit_visa.webp" />
+    <link rel="preload" as="image" href="images/visit.png" />
   </head>
 
   <body>
@@ -219,7 +219,7 @@
         <div class="carousel-inner">
           <div
             class="carousel-item active"
-            style="background-image: url('images/visit_visa.webp')"
+            style="background-image: url('images/visit.png')"
           >
             <div class="carousel-caption">
               <div class="caption-content">
