--- a/bank-account.html
+++ b/bank-account.html
@@ -45,7 +45,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
 
     <link rel="preload" as="image" href="images/logo_square.png" />
-    <link rel="preload" as="image" href="images/Banking.webp" />
+    <link rel="preload" as="image" href="images/banking.png" />
   </head>
 
   <body>
@@ -221,7 +221,7 @@
         <div class="carousel-inner">
           <div
             class="carousel-item active"
-            style="background-image: url('images/Banking.webp')"
+            style="background-image: url('images/banking.png')"
           >
             <div class="carousel-caption">
               <div class="caption-content">
