--- a/international_driving_license.html
+++ b/international_driving_license.html
@@ -49,7 +49,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
 
     <link rel="preload" as="image" href="images/logo_square.png" />
-    <link rel="preload" as="image" href="images/International_driving_license.webp" />
+    <link rel="preload" as="image" href="images/driving.png" />
   </head>
 
   <body>
@@ -226,7 +226,7 @@
           <div
             class="carousel-item active"
             style="
-              background-image: url('images/International_driving_license.webp');
+              background-image: url('images/driving.png');
             "
           >
             <div class="carousel-caption">
